[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/fountain.png" type="Texture" id=1]
[ext_resource path="res://Fountain.gd" type="Script" id=2]
[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.5, 10.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 20.25 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 10 )

[node name="Fountain" type="StaticBody2D"]
script = ExtResource( 2 )
LINES = "It's the town fountain!* Water sprinkles across your face as you toss a coin in."

[node name="Fountain Sprite" type="Sprite" parent="."]
position = Vector2( 0, 21 )
texture = ExtResource( 1 )
offset = Vector2( 0, -20 )

[node name="Fountain Collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 21.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9.25 )
shape = SubResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -3.0
margin_top = 23.0
margin_right = 33.0
margin_bottom = 50.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 8.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 8.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 3 )
text = "E"

[node name="Dialogue" type="Area2D" parent="."]
position = Vector2( 0, 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dialogue"]
position = Vector2( 0, 17 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Dialogue" to="." method="_on_Dialogue_body_entered"]
[connection signal="body_exited" from="Dialogue" to="." method="_on_Dialogue_body_exited"]
